# quad-SID

./: .gitignore  CMakeLists.txt  EigenTypes.hpp  Joint1DataCollector.cpp  Joint1SID.cpp  Joint2DataCollector.cpp  Joint2SID.cpp  Joint3DataCollector.cpp  README.md  RobotMath.cpp  RobotMath.hpp  SharedMemory.hpp  main.cpp
pre-defined-trajectory/: q2-ref.csv  qd2-ref.csv
urdf/test/meshes/: base_link.stl  calf_1.stl  hip_pitch_1.stl  hip_roll_1.stl
urdf/test/urdf/: joint1.urdf  joint2.urdf  joint3.urdf
