cmake_minimum_required(VERSION 3.28)
project(SID)

set(CMAKE_CXX_STANDARD 17)
ADD_COMPILE_DEFINITIONS (URDF_RSC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/urdf/")
ADD_COMPILE_DEFINITIONS (TRJ_RSC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/pre-defined-trajectory/")
ADD_COMPILE_DEFINITIONS (DATA_RSC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/data/")

find_package(Eigen3 REQUIRED HINTS ${Eigen3_HINT})
set(RAISIM_PATH "$ENV{HOME}/Library/raisimLib/raisim/linux")
include_directories(${RAISIM_PATH}/include)
include_directories(${EIGEN3_INCLUDE_DIRS})
link_directories(${RAISIM_PATH}/lib)

add_executable(SID-Joint1 Joint1SID.cpp RobotMath.cpp)
add_executable(SID-Joint2 Joint2SID.cpp RobotMath.cpp)
add_executable(Joint1-data Joint1DataCollector.cpp RobotMath.cpp)
add_executable(Joint2-data Joint2DataCollector.cpp RobotMath.cpp)
add_executable(Joint3-data Joint3DataCollector.cpp RobotMath.cpp)
target_link_libraries(SID-Joint1 PUBLIC raisim pthread)
target_link_libraries(SID-Joint2 PUBLIC raisim pthread)
target_link_libraries(Joint1-data PUBLIC raisim pthread)
target_link_libraries(Joint2-data PUBLIC raisim pthread)
target_link_libraries(Joint3-data PUBLIC raisim pthread)